--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  sqflite: ^2.2.3
-  path_provider: ^2.0.11
+  shared_preferences: ^2.0.17
 
 dev_dependencies:
   flutter_test:
